@@ -10,7 +10,7 @@ sub check {
 }
 
 sub simple_test {
-  $txn = shift;
+  $cmprsn = shift;
   for ($i = 0; $i <= 7; $i++) {
     unlink("recovery.db");
     unlink("recovery.db.jrn0");
@@ -22,9 +22,9 @@ sub simple_test {
       #`cp recovery.db rec-$k.db`;
       #`cp recovery.db.jrn0 rec-$k.db.jrn0`;
       #`cp recovery.db.jrn1 rec-$k.db.jrn1`;
-      check(system("./recovery insert 64 8 $k 0 $txn $i"));
-      check(system("./recovery recover $txn"));
-      check(system("./recovery verify 64 8 $k 0 $txn 1"));
+      check(system("./recovery insert 64 8 $k 0 $cmprsn $i"));
+      check(system("./recovery recover $cmprsn"));
+      check(system("./recovery verify 64 8 $k 0 $cmprsn 1"));
     }
 
     print "erasing $max keys...\n";
@@ -32,15 +32,15 @@ sub simple_test {
       #`cp recovery.db rec-$k.db`;
       #`cp recovery.db.jrn0 rec-$k.db.jrn0`;
       #`cp recovery.db.jrn1 rec-$k.db.jrn1`;
-      check(system("./recovery erase 64 $k 0 $txn $i"));
-      check(system("./recovery recover $txn"));
-      check(system("./recovery verify 64 8 $k 0 $txn 0"));
+      check(system("./recovery erase 64 $k 0 $cmprsn $i"));
+      check(system("./recovery recover $cmprsn"));
+      check(system("./recovery verify 64 8 $k 0 $cmprsn 0"));
     }
   }
 }
 
 sub extended_test {
-  $txn = shift;
+  $cmprsn = shift;
   for ($i = 0; $i <= 10; $i++) {
     unlink("recovery.db");
     unlink("recovery.db.jrn0");
@@ -52,9 +52,9 @@ sub extended_test {
       #`cp recovery.db rec-$k.db`;
       #`cp recovery.db.jrn0 rec-$k.db.jrn0`;
       #`cp recovery.db.jrn1 rec-$k.db.jrn1`;
-      check(system("./recovery insert 1024 1024 $k 0 $txn $i"));
-      check(system("./recovery recover $txn"));
-      check(system("./recovery verify 1024 1024 $k 0 $txn 1"));
+      check(system("./recovery insert 1024 1024 $k 0 $cmprsn $i"));
+      check(system("./recovery recover $cmprsn"));
+      check(system("./recovery verify 1024 1024 $k 0 $cmprsn 1"));
     }
 
     print "erasing $max keys...\n";
@@ -62,15 +62,15 @@ sub extended_test {
       #`cp recovery.db rec-$k.db`;
       #`cp recovery.db.jrn0 rec-$k.db.jrn0`;
       #`cp recovery.db.jrn1 rec-$k.db.jrn1`;
-      check(system("./recovery erase 1024 $k 0 $txn $i"));
-      check(system("./recovery recover $txn"));
-      check(system("./recovery verify 1024 1024 $k 0 $txn 0"));
+      check(system("./recovery erase 1024 $k 0 $cmprsn $i"));
+      check(system("./recovery recover $cmprsn"));
+      check(system("./recovery verify 1024 1024 $k 0 $cmprsn 0"));
     }
   }
 }
 
 sub duplicate_test {
-  $txn = shift;
+  $cmprsn = shift;
   for ($i = 1; $i <= 7; $i++) {
     unlink("recovery.db");
     unlink("recovery.db.jrn0");
@@ -82,22 +82,22 @@ sub duplicate_test {
       #`cp recovery.db rec-$k.db`;
       #`cp recovery.db.jrn0 rec-$k.db.jrn0`;
       #`cp recovery.db.jrn1 rec-$k.db.jrn1`;
-      check(system("./recovery insert 8 8 $k 1 $txn $i"));
-      check(system("./recovery recover $txn"));
-      check(system("./recovery verify 8 8 $k 1 $txn 1"));
+      check(system("./recovery insert 8 8 $k 1 $cmprsn $i"));
+      check(system("./recovery recover $cmprsn"));
+      check(system("./recovery verify 8 8 $k 1 $cmprsn 1"));
     }
 
     print "erasing $max keys...\n";
     for ($k = $max - 1; $k >= 0; $k--) {
-      check(system("./recovery erase 8 $k 1 $txn $i"));
-      check(system("./recovery recover $txn"));
-      check(system("./recovery verify 8 8 $k 1 $txn 0"));
+      check(system("./recovery erase 8 $k 1 $cmprsn $i"));
+      check(system("./recovery recover $cmprsn"));
+      check(system("./recovery verify 8 8 $k 1 $cmprsn 0"));
     }
   }
 }
 
 sub extended_duplicate_test {
-  $txn = shift;
+  $cmprsn = shift;
   for ($i = 1; $i <= 10; $i++) {
     unlink("recovery.db");
     unlink("recovery.db.jrn0");
@@ -108,9 +108,9 @@ sub extended_duplicate_test {
       #`cp recovery.db rec-$k.db`;
       #`cp recovery.db.jrn0 rec-$k.db.jrn0`;
       #`cp recovery.db.jrn1 rec-$k.db.jrn1`;
-      check(system("./recovery insert 1024 1024 $k 1 $txn $i"));
-      check(system("./recovery recover $txn"));
-      check(system("./recovery verify 1024 1024 $k 1 $txn 1"));
+      check(system("./recovery insert 1024 1024 $k 1 $cmprsn $i"));
+      check(system("./recovery recover $cmprsn"));
+      check(system("./recovery verify 1024 1024 $k 1 $cmprsn 1"));
     }
 
     print "erasing $max keys...\n";
@@ -118,24 +118,24 @@ sub extended_duplicate_test {
       #`cp recovery.db rec-$k.db`;
       #`cp recovery.db.jrn0 rec-$k.db.jrn0`;
       #`cp recovery.db.jrn1 rec-$k.db.jrn1`;
-      check(system("./recovery erase 1024 $k 1 $txn $i"));
-      check(system("./recovery recover $txn"));
-      check(system("./recovery verify 1024 1024 $k 1 $txn 0"));
+      check(system("./recovery erase 1024 $k 1 $cmprsn $i"));
+      check(system("./recovery recover $cmprsn"));
+      check(system("./recovery verify 1024 1024 $k 1 $cmprsn 0"));
     }
   }
 }
 
 print "----------------------------\nsimple_test\n";
-simple_test(1);
+simple_test(0);
 
 print "----------------------------\nextended_test\n";
-extended_test(1);
+extended_test(0);
 
 print "----------------------------\nduplicate_test\n";
-duplicate_test(1);
+duplicate_test(0);
 
 print "----------------------------\nextended_duplicate_test\n";
-extended_duplicate_test(1);
+extended_duplicate_test(0);
 
 print "\nsuccess!\n";
 exit(0);
